--- a/cv.html
+++ b/cv.html
@@ -148,7 +148,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="connect-with-me-on-linkedin" class="level3">
 <h3 class="anchored" data-anchor-id="connect-with-me-on-linkedin"><strong>Connect with Me on Linkedin</strong></h3>
-<p>https://www.linkedin.com/in/greg-argueta-cpa-mba-6b147b15</p>
+<p><a href="https://www.linkedin.com/in/greg-argueta-cpa-mba-6b147b15" class="uri">https://www.linkedin.com/in/greg-argueta-cpa-mba-6b147b15</a></p>
 </section>
 <section id="section" class="level3">
 <h3 class="anchored" data-anchor-id="section"></h3>
