--- a/cv.html
+++ b/cv.html
@@ -101,10 +101,25 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="./cv.html" rel="" target="" aria-current="page">
  <span class="menu-text">CV and Contact Information</span></a>
   </li>  
-  <li class="nav-item">
-    <a class="nav-link" href="./assignments.html" rel="" target="">
- <span class="menu-text">Knowledge Mining</span></a>
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-knowledge-mining" role="button" data-bs-toggle="dropdown" aria-expanded="false" rel="" target="">
+ <span class="menu-text">Knowledge Mining</span>
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-knowledge-mining">    
+        <li>
+    <a class="dropdown-item" href="./assignments.html" rel="" target="">
+ <span class="dropdown-text">Assignment 1</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./lab01.qmd" rel="" target="">
+ <span class="dropdown-text"></span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./lab02.qmd" rel="" target="">
+ <span class="dropdown-text"></span></a>
+  </li>  
+    </ul>
+  </li>
 </ul>
             <div class="quarto-navbar-tools ms-auto">
 </div>
