--- a/assignments.html
+++ b/assignments.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>G Argueta - Knowledge Mining</title>
+<title>G Argueta - Assignment 1</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -101,10 +101,25 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./cv.html" rel="" target="">
  <span class="menu-text">CV and Contact Information</span></a>
   </li>  
-  <li class="nav-item">
-    <a class="nav-link active" href="./assignments.html" rel="" target="" aria-current="page">
- <span class="menu-text">Knowledge Mining</span></a>
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-knowledge-mining" role="button" data-bs-toggle="dropdown" aria-expanded="false" rel="" target="">
+ <span class="menu-text">Knowledge Mining</span>
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-knowledge-mining">    
+        <li>
+    <a class="dropdown-item" href="./assignments.html" rel="" target="">
+ <span class="dropdown-text">Assignment 1</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab01.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab01 R programming basics I</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab02.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab02 R programming basics II</span></a>
+  </li>  
+    </ul>
+  </li>
 </ul>
             <div class="quarto-navbar-tools ms-auto">
 </div>
@@ -122,7 +137,6 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#comparison-of-perspectives---what-is-the-objective-of-research-understanding-versus-prediction" id="toc-comparison-of-perspectives---what-is-the-objective-of-research-understanding-versus-prediction" class="nav-link active" data-scroll-target="#comparison-of-perspectives---what-is-the-objective-of-research-understanding-versus-prediction"><strong>Comparison of Perspectives - What is the Objective of Research? Understanding versus Prediction</strong></a></li>
-  <li><a href="#assignment-1" id="toc-assignment-1" class="nav-link" data-scroll-target="#assignment-1"><em>Assignment 1</em></a></li>
   <li><a href="#section" id="toc-section" class="nav-link" data-scroll-target="#section"></a></li>
   </ul>
 </nav>
@@ -132,7 +146,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Knowledge Mining</h1>
+<h1 class="title">Assignment 1</h1>
 </div>
 
 
@@ -149,9 +163,6 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="comparison-of-perspectives---what-is-the-objective-of-research-understanding-versus-prediction" class="level3">
 <h3 class="anchored" data-anchor-id="comparison-of-perspectives---what-is-the-objective-of-research-understanding-versus-prediction"><strong>Comparison of Perspectives - What is the Objective of Research? Understanding versus Prediction</strong></h3>
-</section>
-<section id="assignment-1" class="level3">
-<h3 class="anchored" data-anchor-id="assignment-1"><em>Assignment 1</em></h3>
 <p>The following is a review of articles authors be Breiman (2001) and Shmueli (2010) regarding the usefulness and applicability of explanatory (or data) statistical models as opposed to predictive (or algorithmic) models.</p>
 <p>Breiman’s (2001) assessment of the two cultures in statistical modeling begins by illustrating that factors pass through real world functions to produce outcomes. The real world functions are characterized as nature’s black box which links predictor and response variables. This article’s focus is the comparison of data (or explanatory) models such as regressions, and random or random-like trials; with algorithmic (or predictive) models such as support vectors, forests, and deep learners. Breiman (2001) seems more critical of data models than their algorithmic counterparts and describes three types of issues encountered in the development of data models. The issues include:</p>
 <ol type="1">
