--- a/data_topics.html
+++ b/data_topics.html
@@ -101,10 +101,17 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./cv.html" rel="" target="">
  <span class="menu-text">CV and Contact Information</span></a>
   </li>  
-  <li class="nav-item">
-    <a class="nav-link" href="./assignments.html" rel="" target="">
- <span class="menu-text">Knowledge Mining</span></a>
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-knowledge-minging" role="button" data-bs-toggle="dropdown" aria-expanded="false" rel="" target="">
+ <span class="menu-text">Knowledge Minging</span>
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-knowledge-minging">    
+        <li>
+    <a class="dropdown-item" href="./assignments.html" rel="" target="">
+ <span class="dropdown-text">Assignment 1</span></a>
   </li>  
+    </ul>
+  </li>
 </ul>
             <div class="quarto-navbar-tools ms-auto">
 </div>
