--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <a class="dropdown-item" href="./Lab02.html" rel="" target="">
  <span class="dropdown-text">EPPS 6323: Lab02 R programming basics II</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab03.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab02 R programming (Exploratory Data Analysis)</span></a>
+  </li>  
     </ul>
   </li>
 </ul>
