--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   </li>  
         <li>
     <a class="dropdown-item" href="./Lab03.html" rel="" target="">
- <span class="dropdown-text">EPPS 6323: Lab02 R programming (Exploratory Data Analysis)</span></a>
+ <span class="dropdown-text">EPPS 6323: Lab03 R programming - Exploratory Data Analysis</span></a>
   </li>  
     </ul>
   </li>
