--- a/cv.html
+++ b/cv.html
@@ -111,12 +111,20 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./lab01.qmd" rel="" target="">
- <span class="dropdown-text"></span></a>
+    <a class="dropdown-item" href="./Lab01.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab01 R programming basics I</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./lab02.qmd" rel="" target="">
- <span class="dropdown-text"></span></a>
+    <a class="dropdown-item" href="./Lab02.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab02 R programming basics II</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab03.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab03 R programming - Exploratory Data Analysis</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab04.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab04 R programming (Unsupervised Learning)</span></a>
   </li>  
     </ul>
   </li>
