--- a/data_topics.html
+++ b/data_topics.html
@@ -102,13 +102,29 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">CV and Contact Information</span></a>
   </li>  
   <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-knowledge-minging" role="button" data-bs-toggle="dropdown" aria-expanded="false" rel="" target="">
- <span class="menu-text">Knowledge Minging</span>
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-knowledge-mining" role="button" data-bs-toggle="dropdown" aria-expanded="false" rel="" target="">
+ <span class="menu-text">Knowledge Mining</span>
     </a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-knowledge-minging">    
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-knowledge-mining">    
         <li>
     <a class="dropdown-item" href="./assignments.html" rel="" target="">
  <span class="dropdown-text">Assignment 1</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab01.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab01 R programming basics I</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab02.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab02 R programming basics II</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab03.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab03 R programming - Exploratory Data Analysis</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab04.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab04 R programming (Unsupervised Learning)</span></a>
   </li>  
     </ul>
   </li>
