--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <a class="dropdown-item" href="./Lab03.html" rel="" target="">
  <span class="dropdown-text">EPPS 6323: Lab03 R programming - Exploratory Data Analysis</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab04.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab04 R programming (Unsupervised Learning)</span></a>
+  </li>  
     </ul>
   </li>
 </ul>
