--- a/studies.html
+++ b/studies.html
@@ -101,10 +101,33 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./cv.html" rel="" target="">
  <span class="menu-text">CV and Contact Information</span></a>
   </li>  
-  <li class="nav-item">
-    <a class="nav-link" href="./assignments.html" rel="" target="">
- <span class="menu-text">Knowledge Mining</span></a>
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-knowledge-mining" role="button" data-bs-toggle="dropdown" aria-expanded="false" rel="" target="">
+ <span class="menu-text">Knowledge Mining</span>
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-knowledge-mining">    
+        <li>
+    <a class="dropdown-item" href="./assignments.html" rel="" target="">
+ <span class="dropdown-text">Assignment 1</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab01.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab01 R programming basics I</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab02.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab02 R programming basics II</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab03.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab03 R programming - Exploratory Data Analysis</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Lab04.html" rel="" target="">
+ <span class="dropdown-text">EPPS 6323: Lab04 R programming (Unsupervised Learning)</span></a>
+  </li>  
+    </ul>
+  </li>
 </ul>
             <div class="quarto-navbar-tools ms-auto">
 </div>
